Fix ofd-header z-index

--- a/assets/styles/components/_ofd-header.sass
+++ b/assets/styles/components/_ofd-header.sass
@@ -11,6 +11,7 @@
   align-items: center
   opacity: 1
   transition: none
+  z-index: 9
 
   > .logo
     opacity: 0
